<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"


    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="#90CAF9"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_amt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eT_amt"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/enter_amount"
                android:textColorHint="#CACACD"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:background="#BBDEFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_rate"
                android:layout_width="219dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/rate"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textColor="@color/black"
                />


            <EditText
                android:id="@+id/eT_rate"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:textColorHint="#CACACD"
                android:background="@color/white"
                android:hint="@string/enter_rate"
                android:inputType="number|numberDecimal"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="0dp"
            android:background="#E3F2FD"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:text="@string/time"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText

                android:id="@+id/eT_time"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:textColorHint="#CACACD"
                android:background="@color/white"
                android:hint="@string/enter_time"
                android:inputType="number|numberDecimal"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="40dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/display_emi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="#404051"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/display_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/display_rate"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="@color/black" />




        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/calculate_emi"
            android:textSize="17sp"
            android:paddingHorizontal="60dp"
            android:paddingVertical="15dp"
           android:background="#F55665B8"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/mid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/by"
            android:textSize="10sp"
            android:layout_marginTop="3dp"
            android:textColor="#ACB1B0"
            tools:ignore="SmallSp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>